Updated package manifest.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,8 +2,8 @@ recursive-include resources *
 include MANIFEST.in
 include readme.md
 include setup.py
-recursive-include packager_trash *
 include package_name.txt
 recursive-include packager *
 include setup.cfg
 include LICENSE.txt
+recursive-include packager-trash *
